# super-menu

./: .env.example  CLAUDE.md  FEATURE_IDEAS.md  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json  super-menu.md
.github/: dependabot.yml
plans/: 01-git-tools.md  02-smart-discovery.md  03-freshness-signals.md  04-upstream-gate.md  05-pr-proposals.md  README.md
src/super_menu/: __init__.py  cli.py  mcp_server.py
src/super_menu/core/: __init__.py  braille.py  config.py  plugin.py  registry.py  roads.py
src/super_menu/core/data/: coastline.json
src/super_menu/plugins/: __init__.py
src/super_menu/plugins/free_for_dev/: annotations.py  fetch.py  flags.py  linkcheck.py  plugin.py  search.py
src/super_menu/plugins/free_for_dev/data/: index.json
src/super_menu/plugins/git_tools/: gitio.py  plugin.py
src/super_menu/plugins/hazard_watch/: __init__.py  feeds.py  plugin.py
src/super_menu/plugins/hazard_watch/data/: seed.json
src/super_menu/plugins/pentest/: plugin.py  recon.py
src/super_menu/plugins/route_avoider/: adapter.py  geo.py  plugin.py  webserver.py
src/super_menu/plugins/route_avoider/deploy/: .gitignore  README.md  docker-compose.yml
src/super_menu/tui/: __init__.py  app.py
src/super_menu/web/: __init__.py  chat.py  server.py
src/super_menu/web/static/: index.html
tests/: conftest.py  test_braille.py  test_chat.py  test_config.py  test_discovery.py  test_freshness.py  test_git_tools.py  test_hazard_watch.py  test_roads.py  test_route_avoider.py  test_smoke.py  test_valhalla.py  test_webapp.py  test_webserver.py
(+2 files in other folders)
