[project]
name = "super-menu"
version = "0.1.0"
description = "An extensible super terminal menu — Textual TUI, headless CLI, and MCP server, all driven by a single plugin definition."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.8",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
super-menu = "super_menu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/super_menu"]

[tool.uv]
package = true
